--- a/Mission 01/mission 01.css
+++ b/Mission 01/mission 01.css
@@ -1,67 +1,83 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-.notosanskr * { 
- font-family: 'Noto Sans KR', sans-serif;
+.notosanskr * {
+  font-family: "Noto Sans KR", sans-serif;
 }
 
-*{
-    font-family: 'Noto Sans KR', sans-serif;
+* {
+  font-family: "Noto Sans KR", sans-serif;
 }
 
-#dark_bt{
-    background-color: #BECDFF;
-    display: flex;
-    margin-top: 1%;
-    margin-left: 80%;
-    font-size: 15px;
-    border: none;
-    border-radius: 20px;
-    width: 232px;
-    height: 40px;
-    padding: 0.5rem 3.5rem;
+body {
+  margin: 0;
 }
 
-#searchbar{
-    font-size: 15px;
-    margin-top: 10%;
-    width: 650px;
-    height: 55px;
-    box-shadow: 3px 3px 3px 3px #e4e4e4;
-    border-radius: 10px;
-    border: none;
+.head_title {
+  background-color: #d7d0e3;
 }
 
-#list_title{
-    font-size: 20px;
+.head_title p {
+  margin: 0;
+  font-size: 18px;
+  display: block;
+  text-align: center;
+  color: #000;
+  padding: 1rem 1rem;
 }
 
-input:focus{
-    outline: none;
+#dark_bt {
+  background-color: #d7d0e3;
+  display: flex;
+  margin-top: 1%;
+  margin-left: 80%;
+  font-size: 15px;
+  border: none;
+  border-radius: 20px;
+  width: 232px;
+  height: 40px;
+  padding: 0.5rem 3.5rem;
 }
 
-.search{
-    text-align: center;
-    margin-top: 1%;
+#searchbar {
+  font-size: 15px;
+  margin-top: 5%;
+  width: 650px;
+  height: 55px;
+  box-shadow: 3px 3px 3px 3px #e4e4e4;
+  border-radius: 10px;
+  border: none;
 }
 
-.animal{
-    margin-top: 2%;
-    font-size: 17px;
-    border-radius: 10px;
-    width: 100%;
-    height: 320px;
-    text-align: center;
+#list_title {
+  font-size: 20px;
 }
 
-.animal p{
-    display: flex;
-    justify-content: center;
-    /* text-align: center; */
-    margin-top: 1.5%;
+input:focus {
+  outline: none;
+}
+
+.search {
+  text-align: center;
+  margin-top: 1%;
+}
+
+.animal {
+  margin-top: 2%;
+  font-size: 17px;
+  border-radius: 10px;
+  width: 100%;
+  height: 320px;
+  text-align: center;
+}
+
+.animal p {
+  display: flex;
+  justify-content: center;
+  /* text-align: center; */
+  margin-top: 1.5%;
 }
 
 .dark-mode {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
-
