--- a/Mission 01/mission 01.css
+++ b/Mission 01/mission 01.css
@@ -13,7 +13,7 @@ body {
 }
 
 .head_title {
-  background-color: #d7d0e3;
+  background-color: #f3f1ff;
 }
 
 .head_title p {
@@ -26,7 +26,7 @@ body {
 }
 
 #dark_bt {
-  background-color: #d7d0e3;
+  background-color: #8977ad;
   display: flex;
   margin-top: 1%;
   margin-left: 80%;
