--- a/Mission 02/mission 02.css
+++ b/Mission 02/mission 02.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   margin: auto;
 }
+
 .todolist {
   background-color: white;
   margin-top: 20px;
@@ -39,12 +40,14 @@
 ul {
   list-style: none;
 }
+
 li {
   border-bottom: 1px solid #e4e4e4;
   padding-bottom: 15px;
   padding-top: 15px;
   font-size: 20px;
 }
+
 a {
   float: right;
   text-align: right;
@@ -69,6 +72,7 @@ input[type="text"] {
   margin-right: 10px;
   padding: 5px;
 }
+
 button {
   width: 85px;
   height: 40px;
@@ -77,4 +81,10 @@ button {
   border-radius: 4px;
   outline: 0;
   border: none;
+}
+
+.time {
+  font-size: 13px;
+  margin-left: 2%;
+  border-radius: 5px;
 }
